# pyshiny_examples

./: .gitignore  README.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_core.md  SYSTEM_PROMPT_express.md  SYSTEM_PROMPT_express2core.md  SYSTEM_PROMPT_testing.md  conftest.py  core_docs.txt  counter_token.py  create_apps_using_llm.py  create_dirs.py  create_test_metadata.py  delete.sh  documentation_core.json  documentation_testing.json  eval.yml  generate_feature_folders.py  make_component_list.py  parse_documentation.py  parsing.py  process_input.py  pyproject.toml  requirements.txt  scorer.py  temp_style.css  test_quality_of_apps.py
BrewWineryManagement/: DESCRIPTION.md  PROMPT.md  app.py
CSVDataLoader/: PROMPT.md
CafeManagement_App/: PROMPT.md
CareerExplorer/: DESCRIPTION.md  PROMPT.md  app.py
CateringEventPlanningApp/: DESCRIPTION.md  PROMPT.md  app.py
ClinicalTrialManagementApp/: PROMPT.md
CourseFinder_Compare/: PROMPT.md
DisasterTrack_Dashboard/: PROMPT.md
DiseaseAnalytics_Visualizations/: DESCRIPTION.md  PROMPT.md  app.py
DiseaseMapping_Visualizations/: DESCRIPTION.md  PROMPT.md  app.py
EventManagementScheduler/: DESCRIPTION.md  PROMPT.md  app.py
ExpenseTracker/: PROMPT.md
Explore_Destinations/: PROMPT.md
FanEngagementLoyalty/: PROMPT.md
FileProcessing_/: PROMPT.md
FinancialInsights_/: PROMPT.md
FinancialInsights_Dashboard/: DESCRIPTION.md  PROMPT.md  app.py
FoodSafetyInspectionApp/: DESCRIPTION.md  PROMPT.md  app.py
FoodWaste_ReductionApp/: DESCRIPTION.md  PROMPT.md  app.py
HealthRiskAssessment_App/: PROMPT.md
InjuryRiskAssessment/: DESCRIPTION.md  PROMPT.md  app.py
InputValidation/: DESCRIPTION.md  PROMPT.md  app.py
ItineraryPlanner_App/: PROMPT.md
MedicalImageAnalysis_App/: PROMPT.md
MedicalResearchVis_App/: DESCRIPTION.md  PROMPT.md  app.py
PatientEmpowermentSuite/: DESCRIPTION.md  PROMPT.md  app.py
PatientEngagementEduApp/: DESCRIPTION.md  PROMPT.md  app.py
PatientOutcomePrediction/: PROMPT.md
PlayerDevTracking_App/: PROMPT.md
PlotExport_Images/: DESCRIPTION.md  PROMPT.md  app.py
(+1207 files in other folders)
