[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-test-generator"
version = "0.1.0"
description = "A library to generate tests for Shiny for Python applications using LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic",
    "python-dotenv",
    "requests",
    "chatlas[anthropic]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shiny_test_generator" = ["data/prompts/*.md", "data/docs/*.json"]
