[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-test-generator"
version = "0.1.0"
description = "A library to generate tests for Shiny for Python applications using LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv",
    "requests",
    "chatlas[anthropic]",
    "inspect-ai",
    "chatlas[openai]",
]
license = {text = "MIT"}
authors = [
    {name = "Karan Gathani", email = "karan.gathani@posit.co"}
]

[project.optional-dependencies]
test = [
    "matplotlib>=3.0.0",
    "pandas>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/karangathani/pyshiny_examples"
Documentation = "https://github.com/karangathani/pyshiny_examples#readme"
Source = "https://github.com/karangathani/pyshiny_examples"
Issues = "https://github.com/karangathani/pyshiny_examples/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shiny_test_generator" = ["data/prompts/*.md", "data/docs/*.json"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
